--- a/DateTimeExtensions.Web/DateTimeExtensions.Web.csproj
+++ b/DateTimeExtensions.Web/DateTimeExtensions.Web.csproj
@@ -6,4 +6,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="DateTimeExtensions" Version="5.8.0" />
+    </ItemGroup>
+
 </Project>
